tests/tests/neg/extern_specs/auxiliary/extern_spec_trait00_aux.rs
pub trait MyTrait {
    fn method(&self) -> Self;
}
